fixed navigation on mobile devices

--- a/src/Styles/navbar-styles.css
+++ b/src/Styles/navbar-styles.css
@@ -1,3 +1,7 @@
+Link{
+  text-decoration: none;
+}
+
 .nav-bar{
   position: fixed;
   width: 100%;
@@ -44,8 +48,6 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #ffffff; /* Set your desired background color */
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1); /* Add a shadow if needed */
   }
   
     .hamburger-menu-container {
